--- a/contact.html
+++ b/contact.html
@@ -4,63 +4,73 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Contact</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
+    <title>Contact - Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li class="current"><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
-    <header class="contact-header">
-      <h1>Contact Me</h1>
-    </header>
-    <main>
-      <section>
-        <h3>Connect with me on social media:</h3>
-        <ul class="social-icons">
-          <li>
-            <a href="mailto:rohit97528@gmail.com"
-              ><i class="fas fa-envelope"> Email</i></a
-            >
-          </li>
-          <li>
-            <a href="https://github.com/notr0hit"
-              ><i class="fab fa-github"> Github</i></a
-            >
-          </li>
-          <li>
-            <a href="https://twitter.com/notrohit18"
-              ><i class="fab fa-twitter"> Twitter</i></a
-            >
-          </li>
-          <li>
-            <a href="https://www.instagram.com/notrohit18/"
-              ><i class="fab fa-instagram"> Instagram</i></a
-            >
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/rohit-khare-442a47206/"
-              ><i class="fab fa-linkedin"> Linkedin</i></a
-            >
-          </li>
+
+    <!-- Start of Navbar -->
+    <nav class="navbar">
+      <div class="navbar-container-section-center">
+        <div class="logo">
+          <a href="#">Portfolio</a>
+        </div>
+        <ul class="nav-links">
+          <div class="icon cancel-btn">
+            <i class="fas fa-times"></i>
+          </div>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
-      </section>
-    </main>
-    <footer>
-      <p>Copyright &copy; 2023 Rohit Khare. All rights reserved.</p>
+        <div class="icon menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
+    </nav>
+    <!-- End of Navbar -->
+
+    <!-- Start Of Hero Section -->
+    <section class="hero-contact">
+      <div class="hero-container section-center">
+        <div class="hero-text">
+          <span> Contact Me </span>
+        </div>
+      </div>
+    </section>
+    <!-- End of Hero Section -->
+
+
+    <!-- Start of Contact Section -->
+    <section>
+      <h2>Connect with me on social media:</h2>
+      <ul class="social-icons">
+        <li><a href="mailto:rohit97528@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a></li>
+        <li><a href="https://github.com/notr0hit" target="_blank"><i class="fab fa-github"></i> Github</a></li>
+        <li><a href="https://twitter.com/notrohit18" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
+        <li><a href="https://www.instagram.com/notrohit18/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+        <li><a href="https://www.linkedin.com/in/rohit-khare-442a47206/" target="_blank"><i class="fab fa-linkedin"></i> Linkedin</a></li>
+      </ul>
+    </section>
+    
+    <!-- End of Contact Section -->
+
+    <!-- Start of Footer Section -->
+    <footer class="footer">
+      <div class="footer-container">
+        <p class="footer-text">
+          Copyright &copy; 2023 Rohit Khare. All Rights Reserved
+        </p>
+      </div>
     </footer>
+    <!-- End of Footer Section -->
+
+    <!-- Script start -->
+    <script src="./script.js"> </script>
+    <!-- Script end -->
   </body>
 </html>
