--- a/index.html
+++ b/index.html
@@ -4,43 +4,77 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <nav>
-      <ul>
-        <li class="current"><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
+
+    <!-- Start of Navbar -->
+    <nav class="navbar">
+      <div class="navbar-container-section-center">
+        <div class="logo">
+          <a href="#">Portfolio</a>
+        </div>
+        <ul class="nav-links">
+          <div class="icon cancel-btn">
+            <i class="fas fa-times"></i>
+          </div>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
+        <div class="icon menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
     </nav>
+    <!-- End of Navbar -->
 
-    <header class="index-header">
-      <h1>Welcome to My Portfolio</h1>
-    </header>
-
-    <section id="home">
-      <h2>Home</h2>
-      <p>
-        Welcome to my portfolio site! My name is Rohit Khare and I am a student
-        of computer science at MANIT Bhopal. I have a passion for coding and
-        problem-solving and am always looking for new opportunities to learn and
-        grow. On this site, you can find some of the projects I've worked on, as
-        well as a bit more about me and my interests. Whether you're a fellow
-        coder looking to collaborate or an employer seeking new talent, I hope
-        that my portfolio will give you a sense of my skills and potential.
-        Thank you for taking the time to visit my site, and please feel free to
-        get in touch if you have any questions or opportunities to discuss!
-      </p>
+    <!-- Start Of Hero Section -->
+    <section class="hero-home">
+      <div class="hero-container section-center">
+        <div class="hero-text">
+          <span> Welcome to My Portfolio </span>
+        </div>
+      </div>
     </section>
-    <footer>
-      <p>Copyright &copy; 2023 Rohit Khare. All rights reserved.</p>
+    <!-- End of Hero Section -->
+
+
+    <!-- Start of Home Section -->
+    <section class="home">
+      <div class="home-container">
+        <p class="home-text">
+          Welcome to my portfolio site! My name is Rohit Khare and I am a student
+            of computer science at MANIT Bhopal. I have a passion for coding and
+            problem-solving and am always looking for new opportunities to learn and
+            grow. On this site, you can find some of the projects I've worked on, as
+            well as a bit more about me and my interests. Whether you're a fellow
+            coder looking to collaborate or an employer seeking new talent, I hope
+            that my portfolio will give you a sense of my skills and potential.
+            Thank you for taking the time to visit my site, and please feel free to
+            get in touch if you have any questions or opportunities to discuss!
+        </p>
+      </div>
+    </section>
+    <!-- End of Home Section -->
+
+    <!-- Start of Footer Section -->
+    <footer class="footer">
+      <div class="footer-container">
+        <p class="footer-text">
+          Copyright &copy; 2023 Rohit Khare. All Rights Reserved
+        </p>
+      </div>
     </footer>
+    <!-- End of Footer Section -->
+
+    <!-- Script start -->
+    <script src="./script.js"> </script>
+    <!-- Script end -->
   </body>
 </html>
